# max-package-template

./: .gitignore  CMakeLists.txt  README.md  package-info.json  package-info.json.in
.github/workflows/: main.yml  package.yml
help/: example.maxhelp
source/projects/example/: CMakeLists.txt  example.c
